--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <link href="test.css" rel="stylesheet" />
 </head>
 <body>
-  <div id="test-container"></div>​
-  <!-- <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?2.5.0"></script> -->
-  <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
+  <svg id="hover-line-svg"></svg>​
+  <script type="text/javascript" src="d3.v4.min.js"></script>
   <script type="text/javascript" src="test.js"></script>
 </body>
 </html>
