--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<link href="test.css" rel="stylesheet" />
+<link href="multilinehover.css" rel="stylesheet" />
 </head>
 <body>
   <svg id="hover-line-svg"></svg>​
-  <script type="text/javascript" src="d3.v4.min.js"></script>
-  <script type="text/javascript" src="test.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script type="text/javascript" src="multilinehover.js"></script>
 </body>
 </html>
